# chassis-triage-test-project

./: .gitattributes  .gitignore  README.md  chassis_damage_reports.json  dcli_chassis_triage_team_overview (1).pptx  pyproject.toml  sample_example_workflow.md  structure.txt
chassis_triage/: __init__.py  api.py  config.py  data.py  golden.py  graph.py  observability.py  state.py
chassis_triage/assessor/: __init__.py  base.py  bedrock.py  stub.py  tools.py
chassis_triage/rules/: __init__.py  cost.py  disposition.py  roadability.py
chassis_triage/static/: index.html
scripts/: check_bedrock.py  probe_bedrock.py  probe_structured.py
tests/: test_api.py  test_assessor.py  test_bedrock_assessor.py  test_cost.py  test_disposition.py  test_graph.py  test_roadability.py
