[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "chassis-triage"
version = "0.1.0"
description = "DCLI multi-agent chassis damage triage — PoC"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "langgraph>=0.2.60",
    "langgraph-checkpoint-sqlite>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["chassis_triage*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
