[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "chassis-triage"
version = "0.1.0"
description = "DCLI multi-agent chassis damage triage — PoC"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "langgraph>=0.2.60",
    "langgraph-checkpoint-sqlite>=2.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.30",
    "sse-starlette>=2.1",
    "aiosqlite>=0.20",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "httpx>=0.27"]

[tool.setuptools.packages.find]
include = ["chassis_triage*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
